-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 12, 13, 14, 15, 16, 17
-
Component/s: hotspot
-
b03
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8259606 | 16.0.2 | Christian Hagedorn | P3 | Closed | Not an Issue | b01 |
| JDK-8260890 | 16.0.1 | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8259056 | 11.0.11-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8259460 | 11.0.11 | Christian Hagedorn | P3 | Resolved | Fixed | b01 |
Fails with:
assert((constant_addr - _masm.code()->consts()->start()) == con.offset()) failed: must be: 633952 == 0
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/phedlin/gitviews/
# assert((constant_addr - _masm.code()->consts()->start()) == con.offset()) failed: must be: 633952 == 0
#
# JRE version: Java(TM) SE Runtime Environment (16.0) (fastdebug build 16-internal+0-2020-12-01-1027499.phedlin...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-internal+0-2020-12-01-1027499.phedlin..., compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xa632d2] ConstantTable::emit(CodeBuffer&)+0x262
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/phedlin/gitviews/
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Xbootclasspath/a:/home/phedlin/gitviews/
Host: ph2, Intel(R) Xeon(R) CPU E5-2630 v3 @ 2.40GHz, 32 cores, 94G, Linux Mint 19.3 Tricia
Time: Tue Dec 1 11:54:19 2020 CET elapsed time: 6.918697 seconds (0d 0h 0m 6s)
--------------- T H R E A D ---------------
Current thread (0x00007f2a9c349c00): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=26434, stack(0x00007f2a7d0f8000,0x00007f2a7d1f9000)]
Current CompileTask:
C2: 6918 1707 !b java.lang.invoke.DirectMethodHandle::createFunction (291 bytes)
Stack: [0x00007f2a7d0f8000,0x00007f2a7d1f9000], sp=0x00007f2a7d1f4070, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa632d2] ConstantTable::emit(CodeBuffer&)+0x262
V [libjvm.so+0x15b9d06] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0x296
V [libjvm.so+0xa09fa8] Compile::Code_Gen()+0x438
V [libjvm.so+0xa137f7] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1917
V [libjvm.so+0x845adc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
V [libjvm.so+0xa23978] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
V [libjvm.so+0xa244c8] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x18abc76] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x18b25f0] Thread::call_run()+0x100
V [libjvm.so+0x15954e6] thread_native_entry(Thread*)+0x116
- backported by
-
JDK-8259056 C2: assert((constant_addr - _masm.code()->consts()->start()) == con.offset())
-
- Resolved
-
-
JDK-8259460 C2: assert((constant_addr - _masm.code()->consts()->start()) == con.offset())
-
- Resolved
-
-
JDK-8260890 C2: assert((constant_addr - _masm.code()->consts()->start()) == con.offset())
-
- Resolved
-
-
JDK-8259606 C2: assert((constant_addr - _masm.code()->consts()->start()) == con.offset())
-
- Closed
-
- relates to
-
JDK-8259049 Uninitialized variable after JDK-8257513
-
- Resolved
-
- links to
-
Commit
openjdk/jdk16u/96f427f5
-
Commit
openjdk/jdk/8e42efaa
-
Review
openjdk/jdk16u/17
-
Review
openjdk/jdk/1803