8257513: C2: assert((constant_addr - _masm.code()->consts()->start()) == con.offset()) Reviewed-by: kvn, thartmann